--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,13 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.78"
 base64 = "0.13.0"
-image = "0.23.14"
+console_error_panic_hook = "0.1.7"
 
 [dependencies.web-sys]
 version = "0.3.4"
 features = ["console"]
+
+[dependencies.image]
+version = "0.23.14"
+default-features = false
+features = ["jpeg", "png"]
