--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
+  },
+  "dependencies": {
+    "css-loader": "^6.5.1",
+    "style-loader": "^3.3.1"
   }
 }
